* What's new in version 4.3, PRERELEASE

- More $variable resolution errors may be generated, especially for
  @var("") constructs that target global variables.  These are
  duplicate-eliminated by default, but may be seen with verbosity>=2.

- The stapbpf backend now supports try-catch statements, an improved
  error tapset and error probes.

- The "Build-id mismatch" condition now becomes a warning, so while
  related probes are not inserted, the rest of the script may run.

- The process(EXE).begin probe handlers are now always triggered for
  already-running target processes.

- The proc_mem_rss() tapset function now includes the resident shared
  memory pages as expected. The old behavior can be restored by the
  --compatible=4.2 option on the command line.

* What's new in version 4.2, 2019-11-18

- Initial support for multi-dimensional supports has been added to
  the stapbpf backend. Note that these arrays cannot be iterated upon
  with a foreach loop.

- The stapbpf backend now supports sorting by value in foreach loops.

- The stapbpf backend now supports the concatenation operator for
  userspace probes.

- The stapbpf backend now supports the target() function and -x option.

- The gettimeofday_* functions are now provided for the stapbpf backend.

- The values of an array can now be iterated over in foreach loops in 
  the stapbpf backend. They are no longer defaulted to 0.

- The stapbpf backend now supports order parameterization for begin
  and end probes.

- When the -v option is set along with -L option, the output includes
  duplicate probe points which are distinguished by their PC address.

- The stapbpf backend now supports stap-exporter extensions. 

- The stapbpf backend now supports procfs probes. The implementation 
  uses FIFO special files in /var/tmp/systemtap-$EFFUSER/MODNAME instead 
  of the proc filesystem files.

- The eBPF backend now uses bpf raw tracepoints for kernel.trace("*")